force-app/main/default/objects/Auto_Lead_Generation_Setting__c/Auto_Lead_Generation_Setting__c.object-meta.xml
<CustomObject>
    <label>Auto Lead Generation Setting</label>
    <nameField>
        <displayFormat>ALGS-{000000}</displayFormat>
        <label>Auto Lead Generation Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auto Lead Generation Setting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>