force-app/main/default/objects/Auto_Lead_Generation_Setting__c/fields/Auto_Lead_Generation_Template__c.field-meta.xml
<CustomField>
    <fullName>Auto_Lead_Generation_Template__c</fullName>
    <label>Auto Lead Generation Template</label>
    <referenceTo>Auto_Lead_Generation_Template__c</referenceTo>
    <relationshipLabel>Auto Lead Generation Setting</relationshipLabel>
    <relationshipName>Auto_Lead_Generation_Setting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>