force-app/main/default/objects/Auto_Lead_Generation_Setting__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject Interview (ESI/TESI)</fullName>
            </value>
            <value>
                <fullName>General (GENL)</fullName>
            </value>
            <value>
                <fullName>Employment (EMPL)</fullName>
            </value>
            <value>
                <fullName>Medical (MEDI)</fullName>
            </value>
            <value>
                <fullName>Residence (RESI)</fullName>
            </value>
            <value>
                <fullName>Education (EDUC)</fullName>
            </value>
            <value>
                <fullName>Former Spouse (FMSP)</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Subject Recontact (SUBC)</fullName>
            </value>
            <value>
                <fullName>Financial (FINL)</fullName>
            </value>
            <value>
                <fullName>Public records (PUBR)</fullName>
            </value>
            <value>
                <fullName>Law Enforcement (LAWE)</fullName>
            </value>
            <value>
                <fullName>References (REFE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>